--- a/las_site/templates/las_site/index.html
+++ b/las_site/templates/las_site/index.html
@@ -1,3 +1,12 @@
-<p>The new las site.</p>
+{% extends "las_site/base.html" %}
 
-<p>This will hopefully be the new las site.</p>
+{% block content %}
+   <h4>Entries</h4>
+    {% for entry in entries %}
+        <a href="{% url 'las_site:entry' entry.id %}">
+            <img src={{ entry.image }} alt={{ entry.blurb }}>
+        </a>
+    {% empty %}
+        <p>No entries have been added yet.</p>
+    {% endfor %}
+{% endblock content %}
