--- a/las_site/templates/las_site/index.html
+++ b/las_site/templates/las_site/index.html
@@ -1,7 +1,14 @@
 {% extends "las_site/base.html" %}
 
 {% block content %}
-   <h4>Entries</h4>
+    <h4>Submit a new entry:</h4>
+        <form action="{% url 'las_site:index' %}" method='post'>
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button name="submit">Submit</button>
+        </form>
+
+    <h4>Entries</h4>
     {% for entry in entries %}
         <a href="{% url 'las_site:entry' entry.id %}">
             <img src={{ entry.image }} alt={{ entry.blurb }}>
