Adding forms for new entries and comments.

--- a/las_site/templates/las_site/entry.html
+++ b/las_site/templates/las_site/entry.html
@@ -2,6 +2,13 @@
 
 {% block content %}
     <img src= {{ entry }}>
+
+    <form action="{% url 'las_site:entry' entry.id %}" method='post'>
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button name='submit'>Add Comment</button>
+    </form>
+
     <p>Comments: </p>
     <ul>
         {% for comment in comments %}
