--- a/las_site/templates/las_site/index.html
+++ b/las_site/templates/las_site/index.html
@@ -8,7 +8,7 @@
             <button name="submit">Submit</button>
         </form>
 
-    <h4>Entries</h4>
+    <h4>Today's Entries</h4>
     {% for entry in entries %}
         <a href="{% url 'las_site:entry' entry.id %}">
             <img src={{ entry.image }} alt={{ entry.blurb }}>
