Updating owner permissions and adding bootstrap to the project.

--- a/las_site/templates/las_site/entry.html
+++ b/las_site/templates/las_site/entry.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     <a href= {{ entry.image }}><img src= {{ entry }}></a>
+    <p>Author: {{ entry.owner }}</p>
 
     <form action="{% url 'las_site:entry' entry.id %}" method='post'>
         {% csrf_token %}
