Added a bootstrap nav bar to the base template and added a custom 404 page.

--- a/las_site/templates/las_site/base.html
+++ b/las_site/templates/las_site/base.html
@@ -1,13 +1,45 @@
-<title>Drawring</title>
-<p>
-    <a href="{% url 'las_site:index' %}">Home</a> - 
-    {% if user.is_authenticated %}
-        Hello, {{ user.username }}.
-        <a href="{% url 'users:logout' %}">Log Out</a>
-    {% else %}
-        <a href="{% url 'users:register' %}">Register</a> - 
-        <a href="{% url 'users:login' %}">Log In</a>
-    {% endif %}
+{% load bootstrap3 %}
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>Draw</title>
+
+        {% bootstrap_css %}
+        {% bootstrap_javascript %}
+    </head>
+        
+    <body>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="{% url 'las_site:index' %}">Drawing</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="{% url 'las_site:index' %}">Home</a></li>
+                    <li><a href="#">Page 1</a></li>
+                    <li><a href="#">Page 2</a></li>
+                    <li><a href="#">Page 3</a></li>
+                </ul>
+            <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}
+                        <li><a href="#">{{ user.username }}</a></li>
+                        <li><a href="{% url 'users:logout' %}"><span class="glyphicon glyphicon-log-out"></span>Log Out</a></li>
+                    {% else %}
+                        <li><a href="{% url 'users:register' %}"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
+                        <li><a href="{% url 'users:login' %}"><span class="glyphicon glyphicon-log-in"></span>Log In</a></li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
+    </body>
+
+</html>
+<p> 
 </p>
 
 {% block content %}
