--- a/las_site/templates/las_site/base.html
+++ b/las_site/templates/las_site/base.html
@@ -21,13 +21,11 @@
                 </div>
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="{% url 'las_site:index' %}">Home</a></li>
-                    <li><a href="#">Page 1</a></li>
-                    <li><a href="#">Page 2</a></li>
-                    <li><a href="#">Page 3</a></li>
+                    <li><a href="{% url 'users:profile' user.id %}">My Profile</a></li>
                 </ul>
-            <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
-                        <li><a href="#">{{ user.username }}</a></li>
+                        <li><a href="{% url 'users:profile' user.id %}">{{ user.username }}</a></li>
                         <li><a href="{% url 'users:logout' %}"><span class="glyphicon glyphicon-log-out"></span>Log Out</a></li>
                     {% else %}
                         <li><a href="{% url 'users:register' %}"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
@@ -36,11 +34,18 @@
                 </ul>
             </div>
         </nav>
+
+        <div class="container-fluid">
+            <div class="row content">    
+                <div class="col-sm-3 sidenav">
+                    {% block leftbar %}
+                    {% endblock leftbar %}
+                </div>
+                <div class="col-sm-9">
+                    {% block content %}
+                    {% endblock content %}
+                </div>
+            </div>
+        </div>
     </body>
-
 </html>
-<p> 
-</p>
-
-{% block content %}
-{% endblock content %}
