--- a/las_site/templates/las_site/base.html
+++ b/las_site/templates/las_site/base.html
@@ -21,7 +21,9 @@
                 </div>
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="{% url 'las_site:index' %}">Home</a></li>
-                    <li><a href="{% url 'users:profile' user.id %}">My Profile</a></li>
+                    {% if user.is_authenticated %}
+                        <li><a href="{% url 'users:profile' user.id %}">My Profile</a></li>
+                    {% endif %}
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
@@ -37,11 +39,11 @@
 
         <div class="container-fluid">
             <div class="row content">    
-                <div class="col-sm-3 sidenav">
+                <div class="col-sm-2 sidenav">
                     {% block leftbar %}
                     {% endblock leftbar %}
                 </div>
-                <div class="col-sm-9">
+                <div class="col-sm-10">
                     {% block content %}
                     {% endblock content %}
                 </div>
