--- a/las_site/templates/las_site/index.html
+++ b/las_site/templates/las_site/index.html
@@ -24,11 +24,13 @@
         </form>
 
     <h4>Today's Entries</h4>
-    {% for entry in entries %}
-        <a href="{% url 'las_site:entry' entry.id %}">
-            <img src={{ entry.image }} alt={{ entry.blurb }}>
-        </a>
-    {% empty %}
-        <p>No entries have been added yet today.</p>
-    {% endfor %}
+        {% for entry in entries %}
+            <div class="col-md-3">
+                <a href="{% url 'las_site:entry' entry.id %}">
+                    <img class="img-responsive" src={{ entry.image }} alt={{ entry.blurb }}>
+                </a>
+            </div>
+        {% empty %}
+            <p>No entries have been added yet today.</p>
+        {% endfor %}
 {% endblock content %}
