Set up static file directories.

--- a/las_site/templates/las_site/base.html
+++ b/las_site/templates/las_site/base.html
@@ -11,6 +11,8 @@
 
         {% bootstrap_css %}
         {% bootstrap_javascript %}
+        {% block head %}
+        {% endblock head %}
     </head>
         
     <body>
