--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,15 +1,13 @@
 {% extends "las_site/base.html" %}
+{% load bootstrap3 %}
 
 {% block content %}
-    {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
-    {% endif %}
-
-    <form method="post" action="{% url 'users:login' %}">
+    <form method="post" action="{% url 'users:login' %}" class="form">
         {% csrf_token %}
-        {{ form.as_p }}
-
-        <button name="submit">Log In</button>
+        {% bootstrap_form form %}
+        {% buttons %}
+            <button name="submit">Log In</button>
+        {% endbuttons %}
         <input type="hidden" name="next" value="{% url 'las_site:index' %}" />
     </form>
 {% endblock content %}
