Added a daily submission counter to the entry form and made profile entries responsive.

--- a/las_site/templates/las_site/entry.html
+++ b/las_site/templates/las_site/entry.html
@@ -1,7 +1,7 @@
 {% extends 'las_site/base.html' %}
 
 {% block content %}
-    <a href= {{ entry.image }}><img src= {{ entry }}></a>
+    <a href= {{ entry.image }}><img src= {{ entry }} class="img-responsive"></a>
     <a href="{% url 'users:profile' entry.owner.id %}"><p>Author: {{ entry.owner }}</p></a>
 
     <form action="{% url 'las_site:entry' entry.id %}" method='post'>
