Several changes to get the site ready for the real world.

--- a/las_site/templates/las_site/base.html
+++ b/las_site/templates/las_site/base.html
@@ -41,7 +41,7 @@
 
         <div class="container-fluid">
             <div class="row content">    
-                <div class="col-sm-2 sidenav">
+                <div class="col-sm-2 sidenav" id="leftbar">
                     {% block leftbar %}
                     {% endblock leftbar %}
                 </div>
