--- a/static/css/index.css
+++ b/static/css/index.css
@@ -11,3 +11,16 @@
     max-height: 100%;
     max-width: 100%;
 }
+
+#index-submit{
+    background: gray;
+}
+
+input, textarea{
+    background-color: #ffffff;
+}
+
+#countdown{
+    font-size: 2em;
+}
+
